[package]
name = "rcon-toolbelt"
description = "RCON Utilities for minecraft"
license = "MIT"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
cgmath = "0.18.0"
clap = { version = "4.0.10", features = ["derive"] }
line_drawing = "1.0.0"
linestring = "0.8.0"
rcon = { version = "0.6.0", features = ["rt-tokio"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
tokio = { version = "1.21.2", features = ["full"] }
